fix some spacing

--- a/browser/src/components/ContributionCard.css
+++ b/browser/src/components/ContributionCard.css
@@ -19,6 +19,8 @@
 
 .full.full {
   height:fit-content;
+  max-width: 400px;
+  width: 100%;
 }
 
 /*.contributionCardContainer > h2 {*/
@@ -90,7 +92,7 @@
 
 .preview-card {
   margin-left: auto;
-  margin-top: 3rem;
+  margin-top: 1rem;
 }
 
 .responseContainerContributionCard {
